[package]
name = "rask"
version = "0.1.0"
edition = "2021"

[dependencies]
log = "0.4.22"
ratatui = { version = "0.28.0", features = ["all-widgets"] }
serde = { version = "1.0.208", features = ["derive"] }
serde_json = "1.0.125"
chrono = { version = "0.4.38", features = ["serde", "now"] }
anyhow = "1.0.86"
uuid = { version = "1.10.0", features = ["v6", "std", "rng", "serde"] }
rand = "0.8.5"
